feat: new structure fo result
